--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 
     <title></title>
 
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+
     <link href="css/simplex.bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/simplex.bootstrap.min.css" rel="stylesheet">
@@ -33,6 +35,11 @@
             cursor: pointer;
         }
 
+        .ui-autocomplete {
+
+            z-index:2000 !important;
+        }
+
     </style>
 </head>
 <body>
@@ -44,6 +51,7 @@
 
     <script src="js/lib/underscore-min.js"></script>
     <script src="js/lib/jquery-1.11.0.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <script src="js/lib/angular.min.js"></script>
     <script src="js/lib/angular-route.min.js"></script>
     <script src="js/lib/angular-resource.min.js"></script>
