This is demo video...

--- a/public/index.html
+++ b/public/index.html
@@ -66,5 +66,6 @@
 	<script src="js/services/patients.js"></script>
 	<script src="js/controllers/homeCtrl.js"></script>
     <script src="js/controllers/patientsCtrl.js"></script>
+    <script src="js/controllers/usersCtrl.js"></script>
 </body>
 </html>
