--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
 
     <link href="css/tokenfield-typeahead.css" rel="stylesheet">
     <link href="css/bootstrap-tokenfield.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -65,6 +67,6 @@
 	<script src="js/services/patients.js"></script>
 	<script src="js/controllers/homeCtrl.js"></script>
     <script src="js/controllers/patientsCtrl.js"></script>
-    <script src="js/controllers/usersCtrl.js"></script>
+    <script src="js/controllers/clinicalContentCtrl.js"></script>
 </body>
 </html>
