--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,9 @@
         <ng-view />
     </div>
 
-    <script src="js/lib/underscore-min.js"></script>
+    <script src="js/lib/lodash.min.js"></script>
+
+    <!--<script src="js/lib/underscore-min.js"></script>-->
     <script src="js/lib/jquery-1.11.0.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <script src="js/lib/angular.min.js"></script>
