--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,12 @@
 
     <title></title>
 
-    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+    <link href="css/jquery-ui.css" rel="stylesheet">
 
-    <link href="css/simplex.bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/simplex.bootstrap.min.css" rel="stylesheet">
+    <link href="js/lib/font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="css/tokenfield-typeahead.css" rel="stylesheet">
-    <link href="css/bootstrap-tokenfield.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
-
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -53,17 +48,24 @@
 
     <script src="js/lib/lodash.min.js"></script>
 
-    <!--<script src="js/lib/underscore-min.js"></script>-->
-    <script src="js/lib/jquery-1.11.0.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-    <script src="js/lib/angular.min.js"></script>
-    <script src="js/lib/angular-route.min.js"></script>
-    <script src="js/lib/angular-resource.min.js"></script>
-    <script src="js/lib/bootstrap.min.js"></script>
-    <script src="js/lib/canvasjs.min.js"></script>
-    <script src="js/lib/bootbox.min.js"></script>
+    <!-- jQuery -->
+    <script src="js/lib/jquery-1.11.1.min.js"></script>
+    <script src="js/lib/jquery-ui.min.js"></script>
+    <script src="js/lib/typeahead.bundle.min.js"></script>
 
+    <!-- AngularJS -->
+    <script src="js/lib/angular/angular.min.js"></script>
+    <script src="js/lib/angular/angular-resource.min.js"></script>
+    <script src="js/lib/angular/angular-route.min.js"></script>
+
+    <!-- Bootstrap -->
+    <script src="js/lib/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
+    <script src="js/lib/bootbox.min.js"></script>
+    <script src="js/lib/canvasjs.min.js"></script>
+
+    <!--
     <script src="js/lib/bootstrap-tokenfield.js"></script>
+    -->
 
     <script src="js/app.js"></script>
 	<script src="js/services/patients.js"></script>
