--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
     <link href="js/lib/font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="js/lib/datepicker/css/datepicker.css" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet">
 
@@ -62,6 +63,7 @@
     <script src="js/lib/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
     <script src="js/lib/bootbox.min.js"></script>
     <script src="js/lib/canvasjs.min.js"></script>
+    <script src="js/lib/datepicker/js/bootstrap-datepicker.js"></script>
 
     <!--
     <script src="js/lib/bootstrap-tokenfield.js"></script>
