Fixing small bugs, adding new features

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
     <script src="js/lib/angular/angular.min.js"></script>
     <script src="js/lib/angular/angular-resource.min.js"></script>
     <script src="js/lib/angular/angular-route.min.js"></script>
+    <script src="js/lib/moment.min.js"></script>
 
     <!-- Bootstrap -->
     <script src="js/lib/bootstrap-3.2.0-dist/js/bootstrap.min.js"></script>
